[tool.poetry]
name = "dowwner"
version = "0.8.0"
description = "A Markdown wiki"
authors = ["10sr <8.slashes@gmail.com>"]
license = "PSFL"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
