[tool.poetry]
name = "dowwner"
version = "0.8.0"
description = "A Markdown wiki"
authors = ["10sr <8.slashes@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"
django = "^2.1"
# TODO: Which is better?
markdown2 = "^2.3"
Markdown = "^3.0"
pygments = "^2.3"

[tool.poetry.dev-dependencies]
mypy = "^0.641.0"
black = "^18.3-alpha.0"

[tool.black]
line-length = 88
py36 = true
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  # Project specific
  | dowwner/app/migrations
)/
'''


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
